# mini

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
mini/: app.py
mini/agent/: agent.py  helper.py
mini/tools/: arxiv.py  multimodal.py
scripts/: check_requirements.sh  init.sh
